# nima-career-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  dev_server.py  fly.toml  pyproject.toml
.github/workflows/: ci.yml
corpus/: CORPUS.md  education.yaml  interests.yaml  languages.yaml  principles.yaml  profile.yaml  skills.yaml
corpus/projects/: career-mcp.yaml  cli-toolkit.yaml  design-system-kit.yaml  realtime-whiteboard.yaml  scratch-card-generator.yaml  terminal-portfolio.yaml  yours-design-studio.yaml
corpus/roles/: diamond-schmitt-designer.yaml  functionland-ux.yaml  northwind.yaml  studio-atlas-contract.yaml  studio-atlas-intern.yaml  timeplay-frontend.yaml  timeplay-fullstack.yaml  timeplay-lead.yaml  timeplay.yaml  yours-founder.yaml
docs/adr/: 0001-solidify-repo-for-agent-collaboration.md
examples/: website_backend.py
scripts/: dump_corpus.py  verify.py
src/nima_career_mcp/: __init__.py  __main__.py  corpus.py  grouping.py  prompts.py  resources.py  search.py  security.py  server.py  service.py
src/nima_career_mcp/tools/: __init__.py  browse.py  bullets.py  resume.py
tests/: conftest.py  test_about.py  test_assemble_resume.py  test_corpus_integrity.py  test_experience.py  test_security.py  test_tools.py
