[project]
name = "nima-career-mcp"
version = "0.1.0"
description = "Public, read-only MCP server exposing Nima Karami's vetted, public-safe career corpus."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nima Karami" }]
keywords = ["mcp", "model-context-protocol", "resume", "career", "agent"]
dependencies = [
    "mcp[cli]>=1.27",
    "pydantic>=2",
    "pyyaml>=6",
    "uvicorn>=0.30",
    "starlette>=0.40",
    "rapidfuzz>=3",
]

[project.scripts]
nima-career-mcp = "nima_career_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nima_career_mcp"]

[dependency-groups]
dev = [
    "pytest>=8",
    "anyio>=4",
    "ruff>=0.7",
    "pyright>=1.1",
    "bandit>=1.8",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C901", "S", "UP", "SIM"]

[tool.ruff.lint.mccabe]
# Baselined to clear current honesty-critical branchy functions (validator, resume
# assembler, markdown renderer, search, body-size middleware); still gates runaway growth.
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
# Tests use assert (S101) and may hardcode throwaway values (S105/S106).
"tests/**" = ["S101", "S105", "S106"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.10"

[tool.bandit]
# Scan shipped source only; tests intentionally use asserts and fixture values.
exclude_dirs = ["tests"]
